# DukeIDS706_ds655_IndividualProject02

./: Cargo.toml  README.md  requirements.txt
.github/workflows/: 05_Rust.yml
Codes/: Iris_Data.db  main.py  test_main.py
Rust_Codes/: CRUD.rs  Cargo.toml  Iris_Data.db
Rust_Codes/src/: main.rs
