[package]
name = "Rust_Codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
prettytable-rs = "0.8.0"

[[bin]]
name = "CRUD"
path = "CRUD.rs"
